<resources>
    <string name="app_name">My Friends</string>
    <string name="fname">FIRSTNAME</string>
    <string name="case_details">STARTING FRIENDSHIP</string>
    <string name="edit_fname_hint">Enter your friend firstname,</string>
    <string name="ckb_title">Solved</string>
    <string name="lname">LASTNAME</string>
    <string name="edit_lname_hint">Enter your friend lastname</string>
    <string name="button_friend_dateTime">Mittwoch 4th, Marz 2021</string>
</resources>