<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_fname"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fname" />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_fname_hint" />

    <TextView
        android:id="@+id/text_lname"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lname" />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_lname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_lname_hint" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_details"
        android:text="@string/case_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_add"
        android:text="@string/button_friend_dateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/friend_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ckb_title" />

</androidx.appcompat.widget.LinearLayoutCompat>